--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EM PROGRESSO - Lista de Tarefas</title>
+    <title>Lista de Tarefas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -29,6 +29,6 @@
     </div>
 
     <script src="https://kit.fontawesome.com/1d59e9376d.js" crossorigin="anonymous"></script>
-    <script src="./scripts.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
